--- a/GearObsession/Views/Categories/Index.cshtml
+++ b/GearObsession/Views/Categories/Index.cshtml
@@ -18,6 +18,6 @@
   }
 </ul>
 
-<p>@Html.ActionLink("Add new category", "Create")</p>
-<p>@Html.ActionLink("Add new Item", "Create", "Items")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+</table> 
+<a href="/Categories/Create"><button type="button" class="btn btn-primary">Add New Category</button></a>
+<a href="/Items/Create"><button type="button" class="btn btn-success">Add New Item</button></a>
