--- a/GearObsession/Views/Items/AddUser.cshtml
+++ b/GearObsession/Views/Items/AddUser.cshtml
@@ -15,7 +15,5 @@
     @Html.Label("Select tag")
     @Html.DropDownList("UserId")
 
-    <input type="submit" value="Save" />
+    <input type="submit" value="Save" class="btn btn-success" />
 }
-
-<p>@Html.ActionLink("Back to items", "Index")</p>
