--- a/GearObsession/Views/Users/AddItem.cshtml
+++ b/GearObsession/Views/Users/AddItem.cshtml
@@ -15,7 +15,5 @@
   @Html.Label("Select item")
   @Html.DropDownList("ItemId")
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" class="btn btn-success"/>
 }
-
-<p>@Html.ActionLink("Back to list", "Index")</p>
