--- a/GearObsession/Views/Users/Create.cshtml
+++ b/GearObsession/Views/Users/Create.cshtml
@@ -11,6 +11,5 @@
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
 
-  <input type="submit" value="Add new user" />
+  <input type="submit" value="Add New User" class="btn btn-primary" />
 }
-<p>@Html.ActionLink("Show all users", "Index")</p>
