--- a/GearObsession/Views/Users/Delete.cshtml
+++ b/GearObsession/Views/Users/Delete.cshtml
@@ -9,6 +9,5 @@
 @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
 @using (Html.BeginForm())
 {
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" class="btn btn-danger" />
 }
-@Html.ActionLink("Back to List", "Index")
