--- a/GearObsession/Views/Categories/Create.cshtml
+++ b/GearObsession/Views/Categories/Create.cshtml
@@ -9,6 +9,5 @@
 {
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
-  <input type="submit" value="Add new category" />
+  <input type="submit" value="Add New Category" class="btn btn-primary" />
 }
-<p>@Html.ActionLink("Show all categories", "Index")</p>
