--- a/GearObsession/Views/Categories/Edit.cshtml
+++ b/GearObsession/Views/Categories/Edit.cshtml
@@ -15,6 +15,5 @@
   @Html.LabelFor(model => model.Name)
   @Html.EditorFor(model => model.Name)
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" class="btn btn-success" />
 }
-<p>@Html.ActionLink("Back to categories", "Index")</p>
