--- a/GearObsession/Views/Items/Edit.cshtml
+++ b/GearObsession/Views/Items/Edit.cshtml
@@ -5,32 +5,37 @@
 @model GearObsession.Models.Item
 
 <h2>Edit</h2>
-
-<h4>Edit this item: @Html.DisplayFor(model => model.Name)</h4>
-
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.ItemId)
 
+ <div>
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
+  </div>
 
+  <div>
   @Html.LabelFor(model => model.Category)
   @Html.DropDownList("CategoryId")
-  
+  </div>
+  <div>
   @Html.LabelFor(model => model.Brand)
   @Html.TextBoxFor(model => model.Brand)
-
+  </div>
+  <div>
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
-
-  @Html.LabelFor(model => model.Weight)
+  </div>
+  <div>
+  @Html.LabelFor(model => model.Weight, "Weight in ounces")
   @Html.TextBoxFor(model => model.Weight, new {type="number"})
-
+  </div>
+  <div>
   @Html.LabelFor(model => model.Price)
-  @Html.TextBoxFor(model => model.Price, new {type="number"})
-
-  <input type="submit" value="Save" />
+  @Html.TextBoxFor(model => model.Price, new {type="number", step="0.01"})
+  </div>
+  <div>
+  <input type="submit" value="Save" class="btn btn-success" />
+  </div>
 }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
