--- a/GearObsession/Views/Users/Index.cshtml
+++ b/GearObsession/Views/Users/Index.cshtml
@@ -15,7 +15,5 @@
 {
   <li>@Html.ActionLink($"{user.Name}", "Details", new { id = user.UserId })</li>
 }
+<a href="/Users/Create"><button type="button" class="btn btn-primary">Add New User</button></a>
 
-<p>@Html.ActionLink("Add new user", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
-<p>@Html.ActionLink("See all users", "Index", "Users")</p>
