WIP: adding category breakdown to user detail view
Co-Authored-By: Geoffrey Gao
<geoffreygao1@gmail.com>

--- a/GearObsession/Views/Items/Index.cshtml
+++ b/GearObsession/Views/Items/Index.cshtml
@@ -16,7 +16,7 @@
     <th>@Html.ActionLink("Brand", "Index", new { sortOrder = ViewBag.BrandSortParm})</th>
     <th>@Html.ActionLink("Weight", "Index", new { sortOrder = ViewBag.WeightSortParm})</th>
     <th>@Html.ActionLink("Price", "Index", new { sortOrder = ViewBag.PriceSortParm})</th>
-    <th>Category</th>
+    <th>@Html.ActionLink("Category", "Index", new { sortOrder = ViewBag.CategorySortParm})</th>
     <th>Actions</th>
   </tr>
 
