--- a/GearObsession/Views/Shared/_Layout.cshtml
+++ b/GearObsession/Views/Shared/_Layout.cshtml
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Gear Planning!</title>
+     <!-- Syncfusion ASP.NET Core controls styles -->
+    <link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.4.48/fluent.css" />
+    < <!-- Syncfusion ASP.NET Core controls scripts -->
+    <script src="https://cdn.syncfusion.com/ej2/20.4.48/dist/ej2.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
@@ -31,5 +35,7 @@
     </div>
   </nav>
     @RenderBody()
+<!-- Syncfusion ASP.NET Core Script Manager -->
+    <ejs-scripts></ejs-scripts>
   </body>
 </html>
